created tasks route

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "todo-app",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
-  "author": "Jenil Gajjar <68738624+JenilGajjar20@users.noreply.github.com>",
+  "description": "A Todo App Project created using Quasar.",
+  "productName": "Todo App",
+  "author": "Jenil Gajjar",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
